# usb-dongle-sms

./: Cargo.toml  README.md
sms-api/: Cargo.toml
sms-api/src/: alcatel.rs  lib.rs
sms-api/tests/: alcatel_rest_api.rs
terminal-app/: Cargo.toml
terminal-app/src/: main.rs
