[package]
name = "sms-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "sms_api"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
httpmock = "0.6.7"
serde_json = "1.0.95"
